--- a/PYTHON_MISIONTIC/INTRO_PROGRAMACION/clase_2_practica.ipynb
+++ b/PYTHON_MISIONTIC/INTRO_PROGRAMACION/clase_2_practica.ipynb
@@ -176,6 +176,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HolaMaria\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola\" + \"Maria\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Maria\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola\" + \" \" + \"Maria\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -232,6 +266,23 @@
    ],
    "source": [
     "print(f\"7+5 = {a}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(a))"
    ]
   },
   {
