Ejercicios clase 4 update

--- a/PYTHON_MISIONTIC/INTRO_PROGRAMACION/Ejercicios_evaluativos.ipynb
+++ b/PYTHON_MISIONTIC/INTRO_PROGRAMACION/Ejercicios_evaluativos.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1095,14 +1095,15 @@
       "157806\n",
       "158403\n",
       "159001\n",
-      "159600\n"
+      "159600\n",
+      "160200\n"
      ]
     }
    ],
    "source": [
     "suma = 0\n",
-    "for i in range(-200,600):\n",
-    "    suma = suma + i\n",
+    "for i in range(-200,601):\n",
+    "    suma += i\n",
     "    print(suma)"
    ]
   },
@@ -1117,34 +1118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "suma = 0\n",
-    "while True:\n",
-    "numero = range(-200,600)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "400\n"
+      "160200\n"
      ]
     }
    ],
    "source": [
-    "for numbers in range(-200, 600):\n",
-    "    star = -200 + 1\n",
-    "    end = 600 - 1\n",
-    "result = star + end\n",
-    "print(result)"
+    "suma = sum(range(-200, 601))\n",
+    "print(suma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Explicacion***: el range() funciona con start: el numero exacto que quiero, end: el número que quiero más uno, ya que no es inclusivo.\n",
+    "Hay un tercer parámetro: step, que indica de a cuantos pasos se va a tomar el rango (si de a uno, dos, etc)"
    ]
   },
   {
