--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -122,11 +122,11 @@
         "print(\"All done!\")"
       ],
       "metadata": {
-        "id": "DNsHVOIL_ITB",
-        "outputId": "4dfabba6-0a64-42ec-a642-22ead03682ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DNsHVOIL_ITB",
+        "outputId": "4dfabba6-0a64-42ec-a642-22ead03682ce"
       },
       "execution_count": 38,
       "outputs": [
@@ -162,12 +162,12 @@
         "file.head()"
       ],
       "metadata": {
-        "id": "4wfCmYBR66NM",
-        "outputId": "1054ed80-8fcf-474f-f7dc-978c278bd900",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "4wfCmYBR66NM",
+        "outputId": "1054ed80-8fcf-474f-f7dc-978c278bd900"
       },
       "execution_count": 17,
       "outputs": [
@@ -345,12 +345,12 @@
         "file.tail()"
       ],
       "metadata": {
-        "id": "v4mqcqbw9SJR",
-        "outputId": "957f2726-89dd-4a09-f6f1-fedef5e81dd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "v4mqcqbw9SJR",
+        "outputId": "957f2726-89dd-4a09-f6f1-fedef5e81dd2"
       },
       "execution_count": 29,
       "outputs": [
@@ -528,11 +528,11 @@
         "file.count()[0]"
       ],
       "metadata": {
-        "id": "pc-83m667ehL",
-        "outputId": "4839c4cd-2ee6-446d-f566-e7d49a898a62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pc-83m667ehL",
+        "outputId": "4839c4cd-2ee6-446d-f566-e7d49a898a62"
       },
       "execution_count": 27,
       "outputs": [
@@ -551,15 +551,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#Confirming number of rows\n",
+        "#Confirming number of rows with different method\n",
         "file.shape[0]"
       ],
       "metadata": {
-        "id": "M5WfJV578AlB",
-        "outputId": "2c5509d5-dc45-4603-b740-34c397e58a82",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M5WfJV578AlB",
+        "outputId": "2c5509d5-dc45-4603-b740-34c397e58a82"
       },
       "execution_count": 20,
       "outputs": [
@@ -572,32 +572,6 @@
           },
           "metadata": {},
           "execution_count": 20
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "file.shape[1]"
-      ],
-      "metadata": {
-        "id": "Qh_u7HD09OIP",
-        "outputId": "18695bb6-780f-41eb-9c9a-7b1acdf37ca2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
         }
       ]
     },
@@ -621,6 +595,49 @@
         "# open file and init vars\n",
         "# evaluate the contents of the file"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "df = pd.DataFrame(file)\n",
+        "\n",
+        "unique_states= df[\"State\"].unique()\n",
+        "unique_states"
+      ],
+      "metadata": {
+        "id": "jGtp7ocqEQG8",
+        "outputId": "90a90389-238e-44bd-a9a7-2c046124943e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['CA', 'AZ', 'NV', 'FL', 'CA           ', 'WA', 'NH', 'ID', 'CO',\n",
+              "       'Ca', 'TX', 'NM', 'OR', 'UT', 'MA', 'IN'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#It seems we have some "
+      ],
+      "metadata": {
+        "id": "9x6wx_gtF52u"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
