--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -607,11 +607,11 @@
         "unique_states"
       ],
       "metadata": {
-        "id": "jGtp7ocqEQG8",
-        "outputId": "90a90389-238e-44bd-a9a7-2c046124943e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jGtp7ocqEQG8",
+        "outputId": "90a90389-238e-44bd-a9a7-2c046124943e"
       },
       "execution_count": 46,
       "outputs": [
@@ -631,7 +631,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#It seems we have some "
+        "#It seems we have some space issues and some case issues\n",
+        "#Let's fix those first\n",
+        "\n",
+        "\"\"\" Let's take our original dataframe (file) and fix the 'State' column, so everything there can be\n",
+        "uppercase set and with no spaces before or after \"\"\""
       ],
       "metadata": {
         "id": "9x6wx_gtF52u"
