--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -635,13 +635,97 @@
         "#Let's fix those first\n",
         "\n",
         "\"\"\" Let's take our original dataframe (file) and fix the 'State' column, so everything there can be\n",
-        "uppercase set and with no spaces before or after \"\"\""
+        "uppercase set and with no spaces before or after \"\"\"\n",
+        "\n",
+        "file['State'] = file['State'].str.upper()\n",
+        "\n",
+        "#Let's check if our column is ok now regarding the uppercases\n",
+        "file['State'].unique()\n"
       ],
       "metadata": {
-        "id": "9x6wx_gtF52u"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9x6wx_gtF52u",
+        "outputId": "6d8460d6-3f45-4d03-fd3e-a542889dbc56"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['CA', 'AZ', 'NV', 'FL', 'CA           ', 'WA', 'NH', 'ID', 'CO',\n",
+              "       'TX', 'NM', 'OR', 'UT', 'MA', 'IN'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Now, let's get rid of the spaces\n",
+        "\n",
+        "file['State'] = file['State'].str.strip()\n",
+        "\n",
+        "#Let's check if our column is ok now regarding the uppercases\n",
+        "\n",
+        "\"\"\" In this case, we are using thestrip method to replace all whitespace from column 'State'\n",
+        "to make sure all right, left, and between spaces are remove. \"\"\"\n",
+        "\n",
+        "file['State'].unique()"
+      ],
+      "metadata": {
+        "id": "mPVRZxB6SMRy",
+        "outputId": "a81b895e-581b-4d6c-db7c-4bbbda1cb86c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['CA', 'AZ', 'NV', 'FL', 'WA', 'NH', 'ID', 'CO', 'TX', 'NM', 'OR',\n",
+              "       'UT', 'MA', 'IN'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Now, let's find out how many unique states we have\n",
+        "len(file['State'].unique())"
+      ],
+      "metadata": {
+        "id": "Z2B__K5ITV0S",
+        "outputId": "394758a3-6fce-4ace-8759-e7309c207600",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -654,14 +738,93 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
-        "id": "tfGU3w-OMhA9"
+        "id": "tfGU3w-OMhA9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d82bf9d9-37d4-41ef-86a1-5c9c0390ecad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "State\n",
+              "CA    569\n",
+              "NV      8\n",
+              "AZ      6\n",
+              "CO      3\n",
+              "FL      3\n",
+              "NM      3\n",
+              "TX      2\n",
+              "UT      2\n",
+              "ID      1\n",
+              "IN      1\n",
+              "MA      1\n",
+              "NH      1\n",
+              "OR      1\n",
+              "WA      1\n",
+              "Name: State, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ],
       "source": [
         "# open file and init vars\n",
-        "# evaluate the contents of the file"
+        "# evaluate the contents of the file\n",
+        "\n",
+        "#Let's use group by to aggregate our customers per State and the coun method to see how many of them do we have in each State\n",
+        "\n",
+        "file2 = file.groupby(['State'])['State'].count()\n",
+        "\n",
+        "#Let's sort our colum in an descending way to get the State with more customers\n",
+        "file2.sort_values(ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Let's sort our colum in an ascending way to get the states with less customers\n",
+        "file2.sort_values()"
+      ],
+      "metadata": {
+        "id": "9GGj2AIBXa_0",
+        "outputId": "e9288689-915e-450f-adca-07c985ea1ddb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "State\n",
+              "ID      1\n",
+              "IN      1\n",
+              "MA      1\n",
+              "NH      1\n",
+              "OR      1\n",
+              "WA      1\n",
+              "TX      2\n",
+              "UT      2\n",
+              "CO      3\n",
+              "FL      3\n",
+              "NM      3\n",
+              "AZ      6\n",
+              "NV      8\n",
+              "CA    569\n",
+              "Name: State, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
       ]
     },
     {
