--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -679,11 +679,11 @@
         "file['State'].unique()"
       ],
       "metadata": {
-        "id": "mPVRZxB6SMRy",
-        "outputId": "a81b895e-581b-4d6c-db7c-4bbbda1cb86c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mPVRZxB6SMRy",
+        "outputId": "a81b895e-581b-4d6c-db7c-4bbbda1cb86c"
       },
       "execution_count": 52,
       "outputs": [
@@ -707,11 +707,11 @@
         "len(file['State'].unique())"
       ],
       "metadata": {
-        "id": "Z2B__K5ITV0S",
-        "outputId": "394758a3-6fce-4ace-8759-e7309c207600",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z2B__K5ITV0S",
+        "outputId": "394758a3-6fce-4ace-8759-e7309c207600"
       },
       "execution_count": 53,
       "outputs": [
@@ -786,19 +786,24 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#Let's sort our colum in an ascending way to get the states with less customers\n",
-        "file2.sort_values()"
-      ],
+      "cell_type": "markdown",
       "metadata": {
-        "id": "9GGj2AIBXa_0",
-        "outputId": "e9288689-915e-450f-adca-07c985ea1ddb",
+        "id": "7mcM6cUAMhLB"
+      },
+      "source": [
+        "**Question 4** What is the state with the least customers?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {
+        "id": "8T0Ka2RqMi3P",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "663056e1-dbd1-45fe-e32a-f8e2a9791b89"
       },
-      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,29 +828,16 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 69
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7mcM6cUAMhLB"
-      },
-      "source": [
-        "**Question 4** What is the state with the least customers?"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "8T0Ka2RqMi3P"
-      },
-      "outputs": [],
+      ],
       "source": [
         "# open file and init vars\n",
-        "# evaluate the contents of the file"
+        "# evaluate the contents of the file\n",
+        "#Let's sort our colum in an ascending way to get the states with the least customers\n",
+        "file2.sort_values()\n",
+        "\n",
+        "#We have that ID, IN, MA, NH, OR and WA are the States with the least customers"
       ]
     },
     {
@@ -859,14 +851,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
-        "id": "k8M1DmA75Km7"
+        "id": "k8M1DmA75Km7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "74b9a2da-6453-4516-b929-e568fb8f10f2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['CustomerID', 'FirstName', 'LastName', 'City', 'State'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ],
       "source": [
         "# open file and init vars\n",
-        "# evaluate the contents of the file"
+        "# evaluate the contents of the file\n",
+        "\n",
+        "file.columns\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "file3 = file.groupby(['LastName'])['LastName'].count()\n",
+        "file3.sort_values(ascending=False)\n",
+        "\n",
+        "#This give us that the most common lastname is Smith"
+      ],
+      "metadata": {
+        "id": "AdCG02WTaKzb",
+        "outputId": "17ba7a11-b512-4627-d03c-979807b29f4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LastName\n",
+              "Smith        8\n",
+              "Doggett      5\n",
+              "Zambrana     5\n",
+              "Gomez        5\n",
+              "Johnson      4\n",
+              "            ..\n",
+              "Maye         1\n",
+              "DePland      1\n",
+              "Mathewson    1\n",
+              "Mather       1\n",
+              "Oquinn       1\n",
+              "Name: LastName, Length: 424, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
       ]
     },
     {
