--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -1157,12 +1157,12 @@
         "orders.tail()"
       ],
       "metadata": {
-        "id": "8orNgEUvbUKh",
-        "outputId": "263e753b-374b-4d84-b5a1-9e37aa38849e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "8orNgEUvbUKh",
+        "outputId": "263e753b-374b-4d84-b5a1-9e37aa38849e"
       },
       "execution_count": 76,
       "outputs": [
@@ -1352,11 +1352,11 @@
         "len(orders)"
       ],
       "metadata": {
-        "id": "9sRtForkbdWe",
-        "outputId": "f1c6ccef-8f8b-4c14-977b-e0140bf9d46b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9sRtForkbdWe",
+        "outputId": "f1c6ccef-8f8b-4c14-977b-e0140bf9d46b"
       },
       "execution_count": 79,
       "outputs": [
@@ -1378,11 +1378,11 @@
         "orders.columns"
       ],
       "metadata": {
-        "id": "2FGTAfhjbtiO",
-        "outputId": "2c95917b-e8c9-428e-9bec-95062ed7e905",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2FGTAfhjbtiO",
+        "outputId": "2c95917b-e8c9-428e-9bec-95062ed7e905"
       },
       "execution_count": 80,
       "outputs": [
@@ -1405,11 +1405,11 @@
         "len(orders['OrderID'].unique())"
       ],
       "metadata": {
-        "id": "91ZEvl9vbXpB",
-        "outputId": "b6f06e17-e77c-4e4a-975a-21598e4e6c47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "91ZEvl9vbXpB",
+        "outputId": "b6f06e17-e77c-4e4a-975a-21598e4e6c47"
       },
       "execution_count": 82,
       "outputs": [
@@ -1430,7 +1430,7 @@
       "source": [
         "\"\"\" Question #2: What is the average number of items per order (rounded to two decimal places)? \"\"\"\n",
         "\n",
-        "# First, we need to group by the items (Products) per orderID and do the count\n",
+        "# First, we need to group by the items (Products) per orderID and do the count so we can find the average\n",
         "\n",
         "# Grouping the DataFrame by OrderID and count the number of ProductName occurrences\n",
         "order_items = orders.groupby('OrderID')['ProductName'].count()\n",
@@ -1442,11 +1442,11 @@
         "print(f\"The average number of items per order is {avg_items_per_order}\")"
       ],
       "metadata": {
-        "id": "7QKBPfIwb-iq",
-        "outputId": "c4ca5e61-8987-4254-afac-cd7063e31f2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7QKBPfIwb-iq",
+        "outputId": "c4ca5e61-8987-4254-afac-cd7063e31f2f"
       },
       "execution_count": 90,
       "outputs": [
@@ -1473,11 +1473,11 @@
         "print(f\"The highest number of items per order is {max_items}.\")"
       ],
       "metadata": {
-        "id": "1-SrjjZaeyJp",
-        "outputId": "85e422d4-38c7-4f73-ad89-6dd094a6128a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1-SrjjZaeyJp",
+        "outputId": "85e422d4-38c7-4f73-ad89-6dd094a6128a"
       },
       "execution_count": 92,
       "outputs": [
@@ -1486,6 +1486,40 @@
           "name": "stdout",
           "text": [
             "The highest number of items per order is 35.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\" Question #4: What is the number of orders placed in October 2021? \"\"\"\n",
+        "\n",
+        "# converting the Date column to a pandas datetime object\n",
+        "orders['Date'] = pd.to_datetime(orders['Date'])\n",
+        "\n",
+        "# filter the DataFrame to only include orders placed in October 2021\n",
+        "october_2021_orders = orders[(orders['Date'].dt.month == 10) & (orders['Date'].dt.year == 2021)]\n",
+        "\n",
+        "# count the number of orders in October 2021\n",
+        "num_october_2021_orders = len(october_2021_orders)\n",
+        "\n",
+        "print(f\"The number of orders placed in October 2021 is: {num_october_2021_orders}\")"
+      ],
+      "metadata": {
+        "id": "I-TWvIjYfkli",
+        "outputId": "7604dff9-722b-4a50-e7ab-43cf189a7131",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number of orders placed in October 2021 is: 437\n"
           ]
         }
       ]
