--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -1536,11 +1536,11 @@
         "file.columns"
       ],
       "metadata": {
-        "id": "OjBrp8yaSPj2",
-        "outputId": "346916a3-a345-4367-d5b1-52d921b6fef2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OjBrp8yaSPj2",
+        "outputId": "346916a3-a345-4367-d5b1-52d921b6fef2"
       },
       "execution_count": 53,
       "outputs": [
@@ -1562,11 +1562,11 @@
         "orders.columns"
       ],
       "metadata": {
-        "id": "Zt8n9uTJUGw3",
-        "outputId": "974c7ce0-ae85-4977-a5b4-14342cb87c1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zt8n9uTJUGw3",
+        "outputId": "974c7ce0-ae85-4977-a5b4-14342cb87c1a"
       },
       "execution_count": 56,
       "outputs": [
@@ -1606,11 +1606,11 @@
         "print(f\"The customer who spent the most in 2021 is {top_customer_name} (CustomerID: {top_customer}), with a total spend of ${customer_totals[top_customer]:,.2f}\")\n"
       ],
       "metadata": {
-        "id": "FQd-5LcaNU7Q",
-        "outputId": "c5856db1-a7e9-486a-f5b5-c0b1f476154e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FQd-5LcaNU7Q",
+        "outputId": "c5856db1-a7e9-486a-f5b5-c0b1f476154e"
       },
       "execution_count": 57,
       "outputs": [
@@ -1632,11 +1632,11 @@
         "sophie_info"
       ],
       "metadata": {
-        "id": "LRIQJ8tLPrYC",
-        "outputId": "03548c14-f518-4f81-aac5-114e90fc98b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LRIQJ8tLPrYC",
+        "outputId": "03548c14-f518-4f81-aac5-114e90fc98b3"
       },
       "execution_count": 60,
       "outputs": [
@@ -1677,11 +1677,11 @@
         "print(f\"CustomerID 1909369 spent a total of ${total_spent:.2f} in 2021\")"
       ],
       "metadata": {
-        "id": "C3t1kzUSU-_O",
-        "outputId": "87fc8b98-4540-4364-e5f9-d5b3d5e18d86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C3t1kzUSU-_O",
+        "outputId": "87fc8b98-4540-4364-e5f9-d5b3d5e18d86"
       },
       "execution_count": 77,
       "outputs": [
@@ -1719,11 +1719,11 @@
         "print(f\"CustomerID 5172443 spent a total of ${total_spent:.2f} in 2021\")"
       ],
       "metadata": {
-        "id": "p6fnRgL5Vu8Q",
-        "outputId": "7cef7b7b-1ee0-456e-9b95-f7059a286ffd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p6fnRgL5Vu8Q",
+        "outputId": "7cef7b7b-1ee0-456e-9b95-f7059a286ffd"
       },
       "execution_count": 83,
       "outputs": [
@@ -1764,11 +1764,11 @@
         "print(f\"CustomerID 5415408 spent a total of ${total_spent:.2f} in 2021\")"
       ],
       "metadata": {
-        "id": "S4yyaLpaYdMw",
-        "outputId": "eedfc8bd-13de-4732-d8e3-47918f7b111a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S4yyaLpaYdMw",
+        "outputId": "eedfc8bd-13de-4732-d8e3-47918f7b111a"
       },
       "execution_count": 84,
       "outputs": [
@@ -1809,11 +1809,11 @@
         "print(f\"CustomerID 5172680 spent a total of ${total_spent:.2f} in 2021\")"
       ],
       "metadata": {
-        "id": "d9MKq6VEZU33",
-        "outputId": "d42a2a63-b352-425a-83db-afb87d9570e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "d9MKq6VEZU33",
+        "outputId": "d42a2a63-b352-425a-83db-afb87d9570e3"
       },
       "execution_count": 85,
       "outputs": [
@@ -1854,11 +1854,11 @@
         "print(f\"CustomerID 4700014 spent a total of ${total_spent:.2f} in 2021\")"
       ],
       "metadata": {
-        "id": "krZ3HFiXZqhd",
-        "outputId": "352e2df1-d76b-4530-f4ab-f9cd4122e98d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "krZ3HFiXZqhd",
+        "outputId": "352e2df1-d76b-4530-f4ab-f9cd4122e98d"
       },
       "execution_count": 87,
       "outputs": [
@@ -1881,52 +1881,127 @@
       "cell_type": "code",
       "source": [
         "customer_totals = orders_2021.groupby(['CustomerID'])['OrderTotal'].sum()\n",
-        "customer_totals.sort_values(ascending=False)"
+        "total_2021 = customer_totals.sort_values(ascending=False)\n",
+        "print(total_2021)\n",
+        "Total1 = total_2021.sum()\n",
+        "Total1"
       ],
       "metadata": {
-        "id": "MdAehFyQWVJK",
-        "outputId": "407001cf-2fc6-4103-f808-03bc394efb02",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MdAehFyQWVJK",
+        "outputId": "f25e76c6-d445-4fca-e1df-48c08fb061c2"
       },
-      "execution_count": 72,
+      "execution_count": 97,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CustomerID\n",
+            "5464       56170.0\n",
+            "5172443    27990.0\n",
+            "5100595    22748.0\n",
+            "5572       19236.0\n",
+            "1902406    18430.0\n",
+            "            ...   \n",
+            "5370758      105.0\n",
+            "5370602      105.0\n",
+            "5370884      105.0\n",
+            "5370422       95.0\n",
+            "5370388       90.0\n",
+            "Name: OrderTotal, Length: 342, dtype: float64\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "CustomerID\n",
-              "5464       56170.0\n",
-              "5172443    27990.0\n",
-              "5100595    22748.0\n",
-              "5572       19236.0\n",
-              "1902406    18430.0\n",
-              "            ...   \n",
-              "5370758      105.0\n",
-              "5370602      105.0\n",
-              "5370884      105.0\n",
-              "5370422       95.0\n",
-              "5370388       90.0\n",
-              "Name: OrderTotal, Length: 342, dtype: float64"
+              "880341.0"
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 97
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#According with this information and the options available, the customer who spent the most was Brandon.\n",
-        "#However, his amount doesn't match was given and doesn't match my initial analysis. I'd love to know what went wrong :) "
+        "Total = orders_2021['OrderTotal'].sum()\n",
+        "Total"
+      ],
+      "metadata": {
+        "id": "-VFF6t5XchGo",
+        "outputId": "b4c9b785-58ba-4136-bf0e-e2b2c60964bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "880341.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#According with this information and the options available, the customer who spent the most was Brandon, CustomerId 5172443.\n",
+        "#However, this amount doesn't match was given and doesn't match my initial analysis. I'd love to know what went wrong :) "
       ],
       "metadata": {
         "id": "JE8844zNaclr"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\" Question #6: Historically, what is the best month for sales?\"\"\" \n",
+        "\n",
+        "# convert the \"Date\" column to a pandas datetime object\n",
+        "orders['Date'] = pd.to_datetime(orders['Date'])\n",
+        "\n",
+        "# extract the month from the \"Date\" column\n",
+        "orders['Month'] = orders['Date'].dt.month\n",
+        "\n",
+        "# group by month and sum the sales amounts\n",
+        "monthly_sales = orders.groupby(['Month'])['OrderTotal'].sum()\n",
+        "\n",
+        "# find the month with the highest sales\n",
+        "best_month = monthly_sales.idxmax()\n",
+        "\n",
+        "# print the result\n",
+        "print(f\"The best month for sales historically is month {best_month}\")"
+      ],
+      "metadata": {
+        "id": "fAVtpk87bWZ6",
+        "outputId": "9075ff20-f066-40a8-bbd4-024a6175f88f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The best month for sales historically is month 1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
