--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -1933,11 +1933,11 @@
         "Total"
       ],
       "metadata": {
-        "id": "-VFF6t5XchGo",
-        "outputId": "b4c9b785-58ba-4136-bf0e-e2b2c60964bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-VFF6t5XchGo",
+        "outputId": "b4c9b785-58ba-4136-bf0e-e2b2c60964bc"
       },
       "execution_count": 93,
       "outputs": [
@@ -1981,23 +1981,25 @@
         "\n",
         "# find the month with the highest sales\n",
         "best_month = monthly_sales.idxmax()\n",
+        "print(best_month)\n",
         "\n",
         "# print the result\n",
         "print(f\"The best month for sales historically is month {best_month}\")"
       ],
       "metadata": {
-        "id": "fAVtpk87bWZ6",
-        "outputId": "9075ff20-f066-40a8-bbd4-024a6175f88f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fAVtpk87bWZ6",
+        "outputId": "8fab1b16-8e76-46ff-ead8-91112943730b"
       },
-      "execution_count": 91,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "1.0\n",
             "The best month for sales historically is month 1.0\n"
           ]
         }
